# br_game

./: README.md  pyproject.toml
BattleRoyale/: manage.py
BattleRoyale/BattleRoyale/: asgi.py  settings.py  urls.py  wsgi.py
BattleRoyale/game/: characters.py  comsumers.py  consumers.py  manage_game.py  routing.py
src/: connect.js  index.css  index.html
