[tool.poetry]
name = "br-game"
version = "0.1.0"
description = ""
authors = ["Royale Li <royale.li@sifive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
channels = "^4.1.0"
channels-redis = "^4.2.0"
djangorestframework = "^3.15.2"
daphne = "^4.1.2"
nest-asyncio = "^1.6.0"
websocket = "^0.2.1"
websockets = "^13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
